src/qt/libqmetaobject.bf

public struct QMetaProperty
{
	[LinkName("QMetaProperty_new")]
	public static extern QMetaProperty* QMetaProperty_new(QMetaProperty* other);
	[LinkName("QMetaProperty_new2")]
	public static extern QMetaProperty* QMetaProperty_new2(QMetaProperty* other);
	[LinkName("QMetaProperty_new3")]
	public static extern QMetaProperty* QMetaProperty_new3();
	[LinkName("QMetaProperty_Name")]
	public static extern char8[] QMetaProperty_Name(Self* c_this);
	[LinkName("QMetaProperty_TypeName")]
	public static extern char8[] QMetaProperty_TypeName(Self* c_this);
	[LinkName("QMetaProperty_Type")]
	public static extern int64 QMetaProperty_Type(Self* c_this);
	[LinkName("QMetaProperty_UserType")]
	public static extern int32 QMetaProperty_UserType(Self* c_this);
	[LinkName("QMetaProperty_TypeId")]
	public static extern int32 QMetaProperty_TypeId(Self* c_this);
	[LinkName("QMetaProperty_MetaType")]
	public static extern QMetaType QMetaProperty_MetaType(Self* c_this);
	[LinkName("QMetaProperty_PropertyIndex")]
	public static extern int32 QMetaProperty_PropertyIndex(Self* c_this);
	[LinkName("QMetaProperty_RelativePropertyIndex")]
	public static extern int32 QMetaProperty_RelativePropertyIndex(Self* c_this);
	[LinkName("QMetaProperty_IsReadable")]
	public static extern bool QMetaProperty_IsReadable(Self* c_this);
	[LinkName("QMetaProperty_IsWritable")]
	public static extern bool QMetaProperty_IsWritable(Self* c_this);
	[LinkName("QMetaProperty_IsResettable")]
	public static extern bool QMetaProperty_IsResettable(Self* c_this);
	[LinkName("QMetaProperty_IsDesignable")]
	public static extern bool QMetaProperty_IsDesignable(Self* c_this);
	[LinkName("QMetaProperty_IsScriptable")]
	public static extern bool QMetaProperty_IsScriptable(Self* c_this);
	[LinkName("QMetaProperty_IsStored")]
	public static extern bool QMetaProperty_IsStored(Self* c_this);
	[LinkName("QMetaProperty_IsUser")]
	public static extern bool QMetaProperty_IsUser(Self* c_this);
	[LinkName("QMetaProperty_IsConstant")]
	public static extern bool QMetaProperty_IsConstant(Self* c_this);
	[LinkName("QMetaProperty_IsFinal")]
	public static extern bool QMetaProperty_IsFinal(Self* c_this);
	[LinkName("QMetaProperty_IsRequired")]
	public static extern bool QMetaProperty_IsRequired(Self* c_this);
	[LinkName("QMetaProperty_IsBindable")]
	public static extern bool QMetaProperty_IsBindable(Self* c_this);
	[LinkName("QMetaProperty_IsFlagType")]
	public static extern bool QMetaProperty_IsFlagType(Self* c_this);
	[LinkName("QMetaProperty_IsEnumType")]
	public static extern bool QMetaProperty_IsEnumType(Self* c_this);
	[LinkName("QMetaProperty_Enumerator")]
	public static extern QMetaEnum QMetaProperty_Enumerator(Self* c_this);
	[LinkName("QMetaProperty_HasNotifySignal")]
	public static extern bool QMetaProperty_HasNotifySignal(Self* c_this);
	[LinkName("QMetaProperty_NotifySignal")]
	public static extern QMetaMethod QMetaProperty_NotifySignal(Self* c_this);
	[LinkName("QMetaProperty_NotifySignalIndex")]
	public static extern int32 QMetaProperty_NotifySignalIndex(Self* c_this);
	[LinkName("QMetaProperty_Revision")]
	public static extern int32 QMetaProperty_Revision(Self* c_this);
	[LinkName("QMetaProperty_Read")]
	public static extern QVariant QMetaProperty_Read(Self* c_this, QObject* obj);
	[LinkName("QMetaProperty_Write")]
	public static extern bool QMetaProperty_Write(Self* c_this, QObject* obj, QVariant* value);
	[LinkName("QMetaProperty_Reset")]
	public static extern bool QMetaProperty_Reset(Self* c_this, QObject* obj);
	[LinkName("QMetaProperty_Bindable")]
	public static extern QUntypedBindable QMetaProperty_Bindable(Self* c_this, QObject* object);
	[LinkName("QMetaProperty_ReadOnGadget")]
	public static extern QVariant QMetaProperty_ReadOnGadget(Self* c_this, void* gadget);
	[LinkName("QMetaProperty_WriteOnGadget")]
	public static extern bool QMetaProperty_WriteOnGadget(Self* c_this, void* gadget, QVariant* value);
	[LinkName("QMetaProperty_ResetOnGadget")]
	public static extern bool QMetaProperty_ResetOnGadget(Self* c_this, void* gadget);
	[LinkName("QMetaProperty_HasStdCppSet")]
	public static extern bool QMetaProperty_HasStdCppSet(Self* c_this);
	[LinkName("QMetaProperty_IsAlias")]
	public static extern bool QMetaProperty_IsAlias(Self* c_this);
	[LinkName("QMetaProperty_IsValid")]
	public static extern bool QMetaProperty_IsValid(Self* c_this);
	[LinkName("QMetaProperty_EnclosingMetaObject")]
	public static extern QMetaObject* QMetaProperty_EnclosingMetaObject(Self* c_this);
}
public struct QMetaClassInfo
{
	[LinkName("QMetaClassInfo_new")]
	public static extern QMetaClassInfo* QMetaClassInfo_new(QMetaClassInfo* other);
	[LinkName("QMetaClassInfo_new2")]
	public static extern QMetaClassInfo* QMetaClassInfo_new2(QMetaClassInfo* other);
	[LinkName("QMetaClassInfo_new3")]
	public static extern QMetaClassInfo* QMetaClassInfo_new3();
	[LinkName("QMetaClassInfo_Name")]
	public static extern char8[] QMetaClassInfo_Name(Self* c_this);
	[LinkName("QMetaClassInfo_Value")]
	public static extern char8[] QMetaClassInfo_Value(Self* c_this);
	[LinkName("QMetaClassInfo_EnclosingMetaObject")]
	public static extern QMetaObject* QMetaClassInfo_EnclosingMetaObject(Self* c_this);
}